--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,8 @@
-
+body {
+    background-image: url(/images/fundo-cinza.png);
+    background-repeat: no-repeat;
+    background-position: top center;
+}
 
 :root {
     --bg-color: #ED8F45;
