--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 body {
     background-image: url(/images/fundo-cinza.png);
     background-repeat: no-repeat;
@@ -7,4 +16,43 @@ body {
 :root {
     --bg-color: #ED8F45;
     --secondary-color: #FBF0F4;
+}
+
+header {
+    display: flex;
+    background-color: var(--secondary-color);
+    align-items: center;
+    font-size: 1.3rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.logo-img{
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+}
+
+.logo-img img {
+    width: 70px;
+}
+
+.titulo-header {
+    margin-left: 10px;
+}
+
+.nav-bar {
+    margin-left: 800px;
+    flex-direction: row;
+    display: flex;
+    gap: 8rem;
+    font-weight: bold;
+}
+
+li {
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+li:hover {
+    color: var(--bg-color);
+    transition: .3s ease-in-out;
 }
