--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,3 +59,38 @@ li a:hover {
     color: var(--bg-color);
     transition: .3s ease-in-out;
 }
+
+/* Home Page */
+
+section{
+    padding: 70px 17% 60px;
+}
+
+.home{
+    background-image: url("../images/home-background.png");
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.home-text h1{
+    color:#ED8F45;
+    font-family: 'Poppins', C;
+    font-size: 6rem;
+    font-weight: 800;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+
+.home-text p{
+    font-family: 'Poppins', sans-serif;
+    color: #FBF0F4;
+    font-size: 1rem;
+    
+
+}
+
+
