Feat:home text style

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,9 +106,10 @@ section{
 .home-text p{
     font-family: 'Poppins', sans-serif;
     color: #FBF0F4;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 500;
     margin-bottom: 30px;
+}
 
 
 
