feat: colors in contato page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url(/images/fundo-cinza.png);
+    background-image: url(/images/home-background.png);
     background-repeat: no-repeat;
     background-position: top center;
 }
