--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
 
 body {
     background-image: url(/images/home-background.png);
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
 }
@@ -152,7 +153,6 @@ section{
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-   
 }
 
 .menu-card img{
