--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,6 +168,15 @@ section{
     margin-bottom: 20px;
 }
 
+.cardapio-container .cardapio-text p{
+    color:#FBF0F4;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 150;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+
 
 
 /*Pizza-container*/
