--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,6 +246,18 @@ section{
     border-radius: 4px;
 }
 
+section h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    margin-left: 100px;
+}
+
+section h5 {
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    margin-left: 100px;
+}
+
 .card-container2{
     display: flex;
     align-content: center;
