--- a/styles/styles.css
+++ b/styles/styles.css
@@ -387,3 +387,15 @@ section h5 {
     font-size: 15px;
     margin: 30px 5px 0;
 }
+
+footer {
+    height: 200px;
+    background-color: rgba(61, 61, 61, 0.692);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    width: 100%;
+}
