--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ section{
 }
 
 .home-text h1{
-    color:#ED8F45;
+    color:var(--bg-color);
     font-family: 'Poppins', sans-serif;
     font-size: 6.5rem;
     font-weight: 800;
@@ -97,7 +97,7 @@ section{
 }
 
 .home-text h2 span{
-    color:#ED8F45;
+    color:var(--bg-color);
     font-family: 'Poppins', sans-serif;
     font-size: 2.8rem;
     font-weight: 550;
@@ -117,7 +117,7 @@ section{
     font-family:'Poppins', sans-serif;
     display: inline-block;
     padding: 13px 40px;
-    background:#ED8F45;
+    background:var(--bg-color);
     font-size: 15px;
     font-weight: 600;
     line-height: 30px;
@@ -130,9 +130,9 @@ section{
 .btn:hover{
     transform: translateX(5px);
     border: 2px solid;
-    border-color:#ED8F45;
+    border-color:var(--bg-color);
     background-color: transparent;
-    color:#ED8F45;
+    color:var(--bg-color);
     border-radius: 4px;
 }
 
