--- a/styles/styles.css
+++ b/styles/styles.css
@@ -442,3 +442,22 @@ footer {
     font-size: 1rem;
     width: 100%;
 }
+
+/*Responsivo*/	
+
+/* Estilos para telas com largura mínima de 700px */
+
+@media (max-width: 700px) {
+    .home-text h1{
+        font-size: 4rem;
+        margin-bottom: 20px;
+    }
+    .home-text h2{
+        font-size: 2.3rem;
+        margin-bottom: 20px;
+    }
+    .home-text h2 span{
+        font-size: 1.8rem;
+        margin-bottom: 20px;
+    }
+}
