--- a/styles/styles.css
+++ b/styles/styles.css
@@ -433,12 +433,13 @@ section h5 {
 
 footer {
     height: 200px;
-    background-color: rgba(61, 61, 61, 0.692);
+    background-color: var(--bg-color);
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     font-size: 1rem;
     width: 100%;
 }
