--- a/styles/styles.css
+++ b/styles/styles.css
@@ -447,8 +447,28 @@ footer {
 
 /* Estilos para telas com largura mínima de 700px */
 
-@media (max-width: 700px) and (max-width: 1024px){
+@media (min-width: 700px) and (max-width: 1024px){
+    
+    header{
+        background-color: var(--hover-button)   ;
+        width: 100%;
+        height: 300px;
     }
+
+    .logo-img{
+        background-color: var(--secondary-color);
+        border-radius: 50%;
+        
+    }   
+    .home-text{
+        width: 100%;
+        margin: 0 auto;
+        background-color: var(--secondary-color);
+    }
+    .home-text{
+        margin-left: 10px;
+    }
+    
     .home-text h1{
         font-size: 3rem;
         margin-bottom: 20px;
@@ -462,7 +482,12 @@ footer {
         margin-bottom: 20px;
     }
 
-@media screen () {
+    footer{
+        width: 100%;
+    }
+}
+
+/* @media screen () {
     .home-text h1{
         font-size: 3rem;
         margin-bottom: 20px;
@@ -475,4 +500,4 @@ footer {
         font-size: 1.8rem;
         margin-bottom: 20px;
     }
-}
+} */
