--- a/styles/styles.css
+++ b/styles/styles.css
@@ -525,3 +525,33 @@ footer {
     }
 }
 
+/* Estilos para telas com largura máxima de 700px*/
+
+@media (max-width: 700px){
+
+    header{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        height: 310px;
+    }
+
+    .logo-img{
+        border-radius: 50%;
+        width: 50px;
+        
+    }  
+
+
+/* Menu de navegação */
+    .nav-bar{
+        margin-top: 15px;
+        margin-bottom: 17px;
+        margin-left: 0;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+
+
