--- a/styles/styles.css
+++ b/styles/styles.css
@@ -553,6 +553,30 @@ footer {
         gap: 2rem;
     }
 
+    .home-text{
+        width: 100%;
+        margin: 0 auto;
+    }
+    .home-text h1{
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+    }
+
+    .home-text h2{
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+    }
+
+    .home-text h2 span{
+        font-size: 1.8rem;
+        margin-bottom: 20px;
+    }
+
+    .home-text p{
+        font-size: 1rem;
+    }
+
+
 }
 
 
