--- a/styles/styles.css
+++ b/styles/styles.css
@@ -576,6 +576,25 @@ footer {
         font-size: 1rem;
     }
 
+    .btn{
+        padding: 10px 30px;
+    }
+
+    
+
+    .contato{
+        margin: 20px 20px;
+    }
+
+    .campos-info{
+        width: 80%;
+    }
+
+    .card-container, .card-container2{
+        flex-direction: column;
+        align-items: baseline;
+    }
+
 
 }
 
