--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 header {
-    background-color: var(--bg-color);
+    background-color: var(--bg-color); 
     height: 5rem;
 }
 
@@ -464,7 +464,7 @@ footer {
 
 /* Estilos para telas com largura mínima de 700px e máxima de 1024px */
 
-@media (min-width: 700px) and (max-width: 1024px){
+ @media (min-width: 701px) and (max-width: 1023px){
     
     header{
         flex-direction: column;
@@ -474,15 +474,20 @@ footer {
         height: 300px;
     }
 
-    .logo-img{
+    .div-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo-img img {
         border-radius: 50%;
-        width: 60px;
-        
+        width: 60px;    
     }  
 
-
 /* Menu de navegação */
-    .nav-bar{
+     .nav-bar {
         margin-top: 15px;
         margin-bottom: 17px;
         margin-left: 0;
@@ -545,35 +550,49 @@ footer {
 
     footer{
         width: 100%;
-    }
+    }  
 
 /* Estilos para telas com largura máxima de 700px*/
 
-@media (max-width: 700px){
+@media (min-width: 700px){
 
-    header{
+     header{
         flex-direction: column;
         align-items: center;
         text-align: center;
         width: 100%;
-        height: 310px;
-    }
+        height: 250px;
+    } 
+    .div-container{
+        background-color: var(--bg-color);
+     }
 
     .logo-img{
-        border-radius: 50%;
-        width: 50px;
-        
+       width: 150px;
+       height: auto;
     }  
+
+    .logo-img img {
+        width: 60%;
+    }
+}
+.titulo-header h1{
+font-size: 16px;
+}
 
 
 /* Menu de navegação */
-    .nav-bar{
-        margin-top: 30px;
-        margin-bottom: 17px;
-        margin-left: 0;
-        flex-direction: column;
-        gap: 2rem;
-    }
+.nav nav {
+    display: block;
+    margin-top: 20px;
+    flex-direction: column;
+    color: #e6e6e6;
+    font-size: 14px;
+}
+
+.nav nav li {
+    margin-top: 10px;
+}
 
     .home-text{
         width: 100%;
@@ -607,7 +626,6 @@ footer {
     gap: 3rem;
     width: 100%;
 }
-
 .pizza-container h5{
     text-align: center;  
     margin-right: 25%;  
@@ -617,7 +635,6 @@ footer {
     line-height: 1.2;
     margin-bottom: 25px;
 }
-
 .bebidas-container h5{
     text-align: center;  
     margin-right: 25%;  
@@ -627,7 +644,6 @@ footer {
     line-height: 1.2;
     margin-bottom: 25px;
 }
-
 .bebidas-container{
     height: 380vh;
     gap: 3rem;
@@ -638,9 +654,6 @@ footer {
     margin-top: 45px;
     gap: 2rem;
     justify-content: center;
-}
-
-
 }
     .contato{
         margin: 20px 20px;
@@ -657,4 +670,3 @@ footer {
 
 
 }
-
